@@ -1,5 +1,12 @@
 2008-03-12  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-wired.c
+		- (add_default_connection_item): create & add a default connection item
+		- (wired_add_menu_item): create the default connection item if there are
+			no other connections
+
+2008-03-12  Dan Williams  <dcbw@redhat.com>
+
 	* configure.ac
 		- Bring in the bits of gnome-common we actually use (all 15 lines)
 
